--- a/Newbie/TelaDeLogin/teladelogin.css
+++ b/Newbie/TelaDeLogin/teladelogin.css
@@ -137,3 +137,71 @@ p {
     text-align: center;
     color: white;
 }
+
+@media screen and (min-width: 280px) and (max-width:310px) {
+    .body {width: 230px}
+    #usuario {width: 200px}
+    #senha {width: 200px}
+    .button {width: 230px}
+}
+
+@media screen and (min-width: 311px) and (max-width:350px) {
+    .body {width: 250px}
+    #usuario {width: 230px}
+    #senha {width: 230px}
+    .button {width: 250px}
+}
+
+@media screen and (min-width: 351px) and (max-width:400px) {
+    .body {width: 280px}
+    #usuario {width: 230px}
+    #senha {width: 230px}
+    .button {width: 250px}
+}
+
+
+@media screen and (min-width: 700px) and (max-width:900px) {
+    .body {width: 600px;
+          height:800px}
+    #usuario {width: 550px}
+    #senha {width: 550px}
+    .button {width: 500px;
+            height: 70px;
+            font-size:x-large}
+    img {margin-top: 110px;
+        width:100px;
+        height:100px}
+    .titulo {font-size:xx-large}
+    .subtitulo1 {font-size:x-large}
+    .subtitulo2 {font-size:x-large}
+    .footer {font-size:larger}
+}
+
+@media screen and (min-width: 901px) and (max-width:1279px) {
+    .body {width: 700px;
+          height:800px}
+    #usuario {width: 650px;
+             height: 40px}
+    #senha {width: 650px;
+           height: 40px}
+    .button {width: 600px;
+            height: 70px;
+            font-size:x-large}
+    img {margin-top: 110px;
+        width:100px;
+        height:100px}
+    .titulo {font-size:xx-large}
+    .subtitulo1 {font-size:x-large}
+    .subtitulo2 {font-size:x-large}
+    .footer {font-size:larger}
+}
+
+@media screen and (min-width: 1280px) {
+    .body {width: 400px;
+          height: 500px;}
+    #usuario {width: 350px}
+    #senha {width: 350px}
+    .button {width: 400px;
+            height: 60px}
+    img {margin-top: 20px;}
+}
